--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,6 +1,5 @@
 jeremy:
   name: Jeremy Lo Ying Ping
-  title: Head of Development, UCL AI Society
+  # title: .
   url: https://jezz.me
   image_url: /img/jeremy_lo_ying_ping.jpg
-# Co-founder & CEO,
